# orzcc

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  rustfmt.toml  scripts_record.md  test_oracle_script.sh
.github/workflows/: cov.yml  doc.yml  rust.yml
docs/: infrastructure.md  ir.md  passes.md
examples/: test.orz
lib/: compile_lib.py  orzcc-runtime-lib.c  orzcc-runtime-lib.s
orzir-vscode/syntaxes/: orzir.tmLanguage.json
scripts/: .gitignore  README.md  build_table.py  compare_ir.py  compare_result.py  compile_one.sh  execute.py  extract_time_record.py  gen_fsc.py  hexfloat.c  merge_cases.py  merge_file.py  test_oracle.py  time_external_test.py  transport_out.py
src/: adt.rs  backend.rs  codegen.rs  collections.rs  frontend.rs  ir.rs  irgen.rs  lib.rs  main.rs  passes.rs
src/backend/: block.rs  context.rs  func.rs  inst.rs  layout.rs  lower.rs  mod.rs  passes.rs  peephole.rs  regs.rs  simplify_cfg.rs
src/collections/: apint.rs  bimap.rs  diagnostic.rs  linked_list.rs  (+5 more)
tests/: common.rs  test_alias_analysis.rs  test_backend_rv.rs  test_exec.rs  test_frontend.rs  test_function_analysis.rs  test_ir_cfg.rs  test_ir_cfg_canonicalize.rs  test_ir_cfg_simplify.rs  test_ir_dfs.rs  test_ir_fold.rs  test_ir_global2local.rs  test_ir_inline.rs  test_ir_inst.rs  test_ir_instcombine.rs  test_ir_loops.rs  test_ir_mem2reg.rs  test_ir_parse.rs  test_multithread.rs  test_regalloc_blockdefuse.rs  test_regalloc_graphcoloring.rs  test_regalloc_liveinterval.rs  test_regalloc_liveness.rs  test_sysy_all.rs  test_sysy_frontend.rs  test_sysy_irgen.rs  test_utils_cfg.rs  test_utils_dfs.rs  test_utils_dominance.rs  test_utils_loop_info.rs
(+356 files in other folders)
