[package]
name = "orzcc"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.61"

[features]
default = [
    "target-arm32",
    "target-arm64",
    "target-riscv64",

    "frontend-ir",
    "frontend-sysy",
]

target-arm32 = []
target-arm64 = []
target-riscv64 = []

frontend-ir = []
frontend-sysy = []
